kubernetes/apps/kube-prometheus-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    decrypt.homelab.local/type: sops
