kubernetes/apps/kube-prometheus-stack/grafana-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: monitoring
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 12.0.2
    helm.sh/chart: grafana-9.2.10
  name: monitoring-grafana-tailscale
  namespace: monitoring
spec:
  ingressClassName: tailscale
  rules:
  - host: pi3s-observe
    http:
      paths:
      - backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pi3s-observe
